welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:26: error: not found: value Clor
  var testCouleur : Color = Clor.green
                            ^